Fix header layout

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -3,6 +3,7 @@
         <div class="page-header" style="background-image: url('./assets/img/top-banner.jpg');">
             <div class="filter"></div>
                 <div class="container">
+                    <div class="space-110"></div>
                     <div class="row">
                         <div class="col-md-6 col-sm-7 col-12 ml-auto">
                             <div class="info info-horizontal"> <!--Need to check css-->
