--- a/src/app/auth/login/login-resetpassword/login-resetpassword.component.html
+++ b/src/app/auth/login/login-resetpassword/login-resetpassword.component.html
@@ -3,6 +3,7 @@
       <div class="page-header" style="background-image: url('./assets/img/top-banner.jpg');">
         <div class="filter"></div>
           <div class="container">
+            <div class="space-110"></div>
             <div class="row">
               <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
                 <div class="card card-register">
