--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,8 +1,9 @@
 <section id="login">
     <div class="wrapper">
-      <div class="page-header" style="background-image: url('./assets/img/top-banner.jpg');">
+      <div class="page-header section-dark" style="background-image: url('./assets/img/top-banner.jpg');">
         <div class="filter"></div>
           <div class="container">
+            <div class="space-110"></div>
             <div class="row">
               <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
                 <div class="card card-register">
