--- a/src/app/rental/rental-list/rental-list.component.html
+++ b/src/app/rental/rental-list/rental-list.component.html
@@ -2,6 +2,7 @@
   <div class="page-header page-header-xs" data-parallax="true" style="background-image: url('./assets/img/fabio-mangione.jpg');">
     <div class="filter"></div>
     <div class="container">
+        <div class="space-50"></div>
         <div class="motto text-center">
             <h1>Personal Trainers</h1>
             <h3>Here are the professionals of personal training.</h3>
