--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -214,8 +214,8 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 download-area ml-auto mr-auto">
-                        <a href="#" class="btn btn-warning btn-round">Download free HTML</a>
-                        <a href="#" class="btn btn-danger btn-round">Download free Angular</a>
+                        <a routerLink="/rentals" class="btn btn-warning btn-round">Download free HTML</a>
+                        <a routerLink="/rentals" class="btn btn-danger btn-round">Download free Angular</a>
                     </div>
                 </div>
                 <div class="row justify-content-md-center sharing-area text-center">
