--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -4,29 +4,14 @@
         <div class="page-carousel">
             <ngb-carousel>
                 <ng-template ngbSlide>
-                <!--Going to replace image url to src="{{rental.image}}" -->
                     <div class="page-header page-header-small" [ngStyle]="{'background-image' : 'url(' + rental.image + ')' }">
                         <div class="content-center">
                             <div class="container">
+                                <div class="space-110"></div>
                                 <div class="row">
                                     <div class="col-md-6 text-left motto">
                                         <h1 class="title">Nishino Trainer</h1>
-                                        <h3>Now you have no excuses, it's time to surprise your clients, your competitors, and why not, the world. You probably won't have a better chance to show off all your potential if it's not by designing a website for your own agency or web studio.</h3>
-                                        <br />
-                                        <div class="buttons">
-                                            <a href="#pablo" class="btn btn-danger btn-round  btn-lg">
-                                                Read More
-                                            </a>
-                                            <a href="#pablo" class="btn btn-neutral btn-link btn-just-icon">
-                                                <i class="fa fa-twitter"></i>
-                                            </a>
-                                            <a href="#pablo" class="btn btn-neutral btn-link btn-just-icon">
-                                                <i class="fa fa-facebook-square"></i>
-                                            </a>
-                                            <a href="#pablo" class="btn btn-neutral btn-link btn-just-icon">
-                                                <i class="fa fa-get-pocket"></i>
-                                            </a>
-                                        </div>
+                                        <h3>Now you have no excuses, it's time to surprise your clients, your competitors, and why not, the world.</h3>
                                     </div>
                                 </div>
                             </div>
@@ -37,26 +22,11 @@
                     <div class="page-header page-header-small" style="background-image: url('./assets/img/faces/800x450profile-lady2.jpg')">
                         <div class="content-center">
                             <div class="container">
+                                <div class="space-110"></div>
                                 <div class="row">
                                     <div class="col-md-8 ml-auto mr-auto text-center motto">
                                         <h1 class="title">Awesome Experiences</h1>
-                                        <h3>Now you have no excuses, it's time to surprise your clients, your competitors, and why not, the world. You probably won't have a better chance to show off all your potential if it's not by designing a website for your own agency or web studio.</h3>
-                                        <br />
-                                        <h6>Connect with us:</h6>
-                                        <div class="buttons">
-                                            <a href="#pablo" class="btn btn-neutral btn-link btn-just-icon">
-                                                <i class="fa fa-twitter"></i>
-                                            </a>
-                                            <a href="#pablo" class="btn btn-neutral btn-link btn-just-icon">
-                                                <i class="fa fa-facebook-square"></i>
-                                            </a>
-                                            <a href="#pablo" class="btn btn-neutral btn-link btn-just-icon">
-                                                <i class="fa fa-instagram"></i>
-                                            </a>
-                                            <a href="#pablo" class="btn btn-neutral btn-link btn-just-icon">
-                                                <i class="fa fa-google-plus"></i>
-                                            </a>
-                                        </div>
+                                        <h3>Now you have no excuses, it's time to surprise your clients, your competitors, and why not, the world.</h3>
                                     </div>
                                 </div>
                             </div>
