add link to rentals

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
         <h6 class=" category-absolute ml-auto mr-auto">Surpported by
         <!-- <h6 class="category category-absolute">Designed and coded by -->
 
-            <a href="https://www.creative-tim.com" target="_blank">
+            <a routerLink="/rentals">
                 <img src="assets/img/creative-tim-white-slim2.png" class="creative-tim-logo">
             </a>
         </h6>
