--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -8,20 +8,20 @@
                         <div class="col-md-6 col-sm-7 col-12 ml-auto">
                             <div class="info info-horizontal"> <!--Need to check css-->
                                 <div class="icon">
-                                    <i class="fa fa-umbrella"></i>
+                                    <i class="fa fa-id-card "></i>
                                 </div>
                                 <div class="description">
-                                    <h3> We've got you covered </h3>
-                                    <p>Larger, yet dramatically thinner. More powerful, but remarkably power efficient. Everything you need in a single case.</p>
+                                    <h3> Verified Trainers </h3>
+                                    <p>厳しい認証を突破した希少なパーソナルトレーナーがあなたの自己実現をサポートします.</p>
                                 </div>
                             </div>
                             <div class="info info-horizontal">
                                 <div class="icon">
-                                    <i class="fa fa-map-signs"></i>
+                                    <i class="fa fa-handshake-o"></i>
                                 </div>
                                 <div class="description">
-                                    <h3> Clear Directions </h3>
-                                    <p>Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas.</p>
+                                    <h3> Easy Booking </h3>
+                                    <p>気に入ったトレーナーを見つけてから予約まで、最短3クリックで完了します.</p>
                                 </div>
                             </div>
                             <div class="info info-horizontal">
@@ -29,8 +29,8 @@
                                     <i class="fa fa-user-secret"></i>
                                 </div>
                                 <div class="description">
-                                    <h3> We value your privacy </h3>
-                                    <p>Completely synergize resource taxing relationships via premier niche markets.</p>
+                                    <h3> Elected community. </h3>
+                                    <p>会員登録は審査制になります. 選ばれしトレーナーと選ばれし会員がマッチングできる特別なサービスです.</p>
                                 </div>
                             </div>
                         </div>
@@ -94,7 +94,7 @@
                                                 placeholder="Confirm Password" (focus)="focus2=true" (blur)="focus2=false"
                                                 required>
                                     </div>
-                                    <button [disabled]="!registarForm.valid" type="submit" class="btn btn-danger btn-block btn-round"  (click)="register()">Become Member</button>
+                                    <button [disabled]="!registarForm.valid" type="submit" class="btn btn-danger btn-block btn-round"  (click)="register()">Request to become Member</button>
                                 </form>
                                 <div class="forgot">
                                     <a routerLink="/login" class="btn btn-link btn-danger">Already have an account?</a>
