--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -62,7 +62,7 @@
                         <div ngbDropdown class="d-inline-block dropdown">
                             <a class="nav-link" id="dropdownBasic1" ngbDropdownToggle><i class="nc-icon nc-single-02"></i> {{auth.getUsername()}}さん</a>
                             <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-primary">
-                                <a class="dropdown-item" routerLink="/manage/bookings">My bookings</a>
+                                <a class="dropdown-item" routerLink="/user/mybookings">My bookings</a>
                             </div>
                         </div>
                     </li>
