--- a/src/app/rental/rental-list/rental-list.component.html
+++ b/src/app/rental/rental-list/rental-list.component.html
@@ -5,7 +5,7 @@
         <div class="space-50"></div>
         <div class="motto text-center">
             <h1>Personal Trainers</h1>
-            <h3>Here are the professionals of personal training.</h3>
+            <h3>Here are professionals of personal training.</h3>
             <br />
         </div>
     </div>
