--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -3,8 +3,7 @@
         <div class="row">
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Licenses</a></li>
+                    <li><a routerLink="/register">Become Personal Trainer?</a></li>
                 </ul>
             </nav>
             <div class="credits ml-auto">
