--- a/src/app/common/components/payment/payment.component.html
+++ b/src/app/common/components/payment/payment.component.html
@@ -33,7 +33,10 @@
 
 
 <!-- <ng-container *ngIf="stripeCustomerId.length > 0">
-登録ずみな場合
+ボタン：クレジットカードを変更する
+→初期化method
+→フラグ切り替え
+
 </ng-container>
 <ng-container *ngIf="!stripeCustomerId.length == 0"> -->
   <form [ngClass]="validatingCardFlag ? 'loading' : '' ">
