--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -66,7 +66,7 @@
               </div>
             </div>
             <div class="footer register-footer text-center">
-              <h6>&copy;{{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> オフショア開発ブログ</h6>
+              <h6>&copy;{{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> Anytime Personal Trainer.inc</h6>
             </div>
           </div>
         </div>
