--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -9,7 +9,7 @@
             <div class="credits ml-auto">
                 <span class="copyright">
                     © {{test | date: 'yyyy'}}, MADE WITH <i class="fa fa-heart heart"></i>
-                    <a href="http://www.offshore-gogo.com" target="_blank" class="description">オフショア開発ブログ</a>
+                    <a href="http://www.offshore-gogo.com" target="_blank" class="description">Anytime Peasonal Trainer.inc</a>
                 </span>
             </div>
         </div>
