--- a/src/app/rental/rental-booking/rental-booking.component.html
+++ b/src/app/rental/rental-booking/rental-booking.component.html
@@ -1,190 +1,114 @@
 <section id="rentalDetailBooking" *ngIf="rental">
 
-<!--     *********    Select Plan     *********      -->
 <div class="pricing-1 section">
     <div class="container">
-        <div class="row">
-            <div class="col-md-6 ml-auto mr-auto text-center">
-                <h2 class="title">Pick the best plan for you</h2>
-                <h5 class="description">あなたに合うコースをお選びいただけます</h5>
-            </div>
-        </div>
-        <div class="space-top"></div>
-        <div class="row">
-            <div class="col-md-3">
-                <div class="card card-pricing" data-color="orange">
-                    <div class="card-body">
-                        <div class="card-icon">
-                            <span class="icon-simple"><i class="nc-icon nc-basket"></i></span>
-                        </div>
-                        <h3 class="card-title">One Time Pass</h3>
-
-                        <p class="card-description">
-                            希望する日時に一回60分のトレーニングが受けられます
-                        </p>
-                        <div class="card-footer">
-                            <a href="" class="btn btn-neutral btn-round">{{ rental.hourlyPrice }}JPY</a>
-                        </div>
-
-                        <div class="form-check-radio">
-                            <label class="form-check-label">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" (input)="chooseCourse(1)">
-                                <span class="form-check-sign"></span>
-                                <div class="icon">
-                                    <i class="fa fa-pencil"></i>
+        <mat-vertical-stepper [linear]="isLinear" #stepper>
+            <mat-step label="Select course">
+                <div class="space-top"></div>
+                <div class="row">
+                    <div class="col-md-6 col-xs-6">
+                        <button class="card" data-background="color" data-color="green" (click)="onCourseSelected(1)">
+                            <div class="card-body text-center">
+                                <div class="card-icon">
+                                    <i class="nc-icon nc-money-coins"></i>
                                 </div>
-                            </label>
+                                <h4 class="card-title">60min Ticket</h4>
+                                <p class="card-description">60minのレッスンが受けられるチケットです.</p>
+                                <div class="card-footer">
+                                    <div class="btn btn-neutral btn-round">{{rental.hourlyPrice}}JPY</div>
+                                </div>
+                            </div>
+                        </button>
+                    </div>
+
+                    <div class="col-md-6 col-xs-6">
+                        <button class="card" data-background="color" data-color="blue" (click)="onCourseSelected(2)">
+                            <div class="card-body text-center">
+                                <div class="card-icon">
+                                    <i class="nc-icon nc-watch-time"></i>
+                                </div>
+                                <h4 class="card-title">90min Ticket</h4>
+                                <p class="card-description">90minのレッスンが受けられるチケットです.</p>
+                                <div class="card-footer">
+                                    <div class="btn btn-neutral btn-round">{{rental.hourlyPrice * 1.5}}JPY</div>
+                                </div>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+            </mat-step>
+            <mat-step label="Pick the best Date and Time" [completed]="isSelectedDateTime">
+                <div class="space-top"></div>
+                <div class="row">
+                    <div class="col-md-7 ml-auto mr-auto">
+                        <app-booking-selecter [rental]="rental" 
+                                              [chosenCourseTime]="chosenCourseTime" 
+                                              (newBookingInfo)="onBookingReady($event)" 
+                                              (chosenDateTime)="isSelectedDateTime=$event"
+                                              >
+                        </app-booking-selecter>
+                    </div>
+                </div>
+                <div class="space-top"></div>
+            </mat-step>
+            <mat-step label="Check total price">
+                <div class="space-top"></div>
+
+                <div class="row">
+                    <div class="col-md-8 mr-auto ml-auto">
+                        <h2 class="title">Total Price</h2>
+                        <div class="description" *ngIf="!isSelectedDateTime">
+                            コース日時を選択してください！
+                        </div>    
+                        <div class="description" *ngIf="isSelectedDateTime">
+                            Trainer Name：{{rental.rentalname}}<br>
+                            Date Time：{{ newBooking.startAt | date: "yyyy-MM/dd-HH:mm" }} 〜 {{ newBooking.endAt | date: "HH:mm" }}<br>
+                            Course：{{rental.hourlyPrice}}JPY × {{chosenCourseTime / 60}}Hour = {{rental.hourlyPrice * chosenCourseTime / 60}}JPY<br>
+                            Service chage(30%)；{{rental.hourlyPrice * chosenCourseTime / 60 * 0.3}}JPY<br>
+                            Total Price；{{rental.hourlyPrice * chosenCourseTime / 60 * 1.3}}JPY<br>
+                        </div>    
+                        <div class="description" *ngIf="isSelectedDateTime && (stripeCustomerId.length>0) && !isChangeBtnClicked">
+                            Paying Metiod：Visa ******4242
+                            <button class="btn btn-primary" (click)="isChangeBtnClicked=true">Change paying method?</button>
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="col-md-3">
-                <div class="card card-pricing" data-color="yellow">
-                    <div class="card-body">
-                        <div class="card-icon">
-                            <span class="icon-simple"><i class="nc-icon nc-watch-time"></i></span>
-                        </div>
-                        <h3 class="card-title">One Time Extended</h3>
-
-                        <p class="card-description">
-                            希望する日時に一回90分のトレーニングが受けられます
-                        </p>
-                        <div class="card-footer">
-                            <a href="" class="btn btn-neutral btn-round">{{ rental.hourlyPrice * 1.5 }}JPY</a>
-                        </div>
-
-                        <div class="form-check-radio">
-                            <label class="form-check-label">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2" (input)="chooseCourse(2)">
-                                <span class="form-check-sign"></span>
-                                <div class="icon">
-                                    <i class="fa fa-pencil"></i>
-                                </div>
-                            </label>
+                <div class="space-top"></div>
+                <div *ngIf="isSelectedDateTime && ((stripeCustomerId.length==0) || isChangeBtnClicked)">
+                    <div class="nav-tabs-navigation">
+                        <div class="nav-tabs-wrapper">
+                            <ngb-tabset [justify]="'center'">
+                                <!-- <ngb-tab title="PayPal">
+                                    <ng-template ngbTabContent >
+                                        <h3 class="text-muted">Total price</h3>
+                                        <div class="space-top"></div>
+                                    </ng-template>
+                                </ngb-tab> -->
+                                <ngb-tab title="CreditCard">
+                                    <ng-template ngbTabContent>
+                                        <div class="space-top"></div>
+                                        <app-payment (paymentComfirmed)="onPaymentConfirmed($event)"></app-payment>
+                                    </ng-template>
+                                </ngb-tab>
+                            </ngb-tabset>
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="col-md-3">
-                <div class="card card-pricing" data-color="green">
-                    <div class="card-body">
-                        <div class="card-icon">
-                            <span class="icon-simple"><i class="nc-icon nc-settings"></i></span>
-                        </div>
-                        <h3 class="card-title">Subscription Pass</h3>
-
-                        <p class="card-description">
-                            毎週一回60分、決まった日時でトレーニングを受けられるコースです
-                        </p>
-                        <div class="card-footer">
-                            <a href="" class="btn btn-neutral btn-round">{{ rental.hourlyPrice }} × 4 JPY/Month</a>
-                        </div>
-    
-                        <div class="form-check-radio">
-                            <label class="form-check-label">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" (input)="chooseCourse(3)">
-                                <span class="form-check-sign"></span>
-                                <div class="icon">
-                                    <i class="fa fa-pencil"></i>
-                                </div>
-                            </label>
-                        </div>
+                <div class="space-top"></div>
+                <div class="row">
+                    <div class="col-md-8 mr-auto ml-auto">
+                        <button *ngIf="!(isSelectedDateTime && (stripeCustomerId || paymentToken)) || isChangeBtnClicked" [disabled]="true" class="btn btn-round">Book Now!</button>
+                        <button *ngIf="isSelectedDateTime && (stripeCustomerId || paymentToken) && !isChangeBtnClicked" class="btn btn-warning btn-round" (click)="createBooking()">Book Now!</button>
                     </div>
-                </div>
-            </div>
-
-            <div class="col-md-3">
-                <div class="card card-pricing" data-color="blue">
-                    <div class="card-body">
-                        <div class="card-icon">
-                            <span class="icon-simple"><i class="nc-icon nc-istanbul"></i></span>
-                        </div>
-                        <h3 class="card-title">Subscription Extended</h3>
-
-                        <p class="card-description">
-                            毎週一回90分、決まった日時でトレーニングを受けられるコースです
-                        </p>
-                        <div class="card-footer">
-                            <a href="" class="btn btn-neutral btn-round">{{ rental.hourlyPrice * 1.5 }} × 4 JPY/Month</a>
-                        </div>
-    
-                        <div class="form-check-radio">
-                            <label class="form-check-label">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4" value="option4" (input)="chooseCourse(4)">
-                                <span class="form-check-sign"></span>
-                                <div class="icon">
-                                    <i class="fa fa-pencil"></i>
-                                </div>
-                            </label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+                </div>                 
+            </mat-step>
+        
+            <!-- Override Icon -->
+            <ng-template matStepperIcon="edit">
+                <mat-icon>check</mat-icon>
+            </ng-template>
+        </mat-vertical-stepper>
+     </div>
 </div>
 
-<!--     *********    Select Date and Time     *********      -->
-<div class="cd-section section-white" id="select-date">
-    <div class="pricing-1 section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 ml-auto mr-auto text-center">
-                    <h2 class="title">Pick the best Date and Time</h2>
-                    <h5 class="description">希望されるスタート日時をご選択ください. Subscriptionプランの場合は選択された日時から毎週同じ曜日、時間に繰り返しされます.</h5>
-                </div>
-            </div>
-            <div class="space-top"></div>
-            <div class="row">
-                <div class="col-sm-7 ml-auto mr-auto text-center">
-                    <app-booking-selecter [rental]="rental" [chosenCourse]="chosenCourse" (newBookingInfo)="onSelectedDateTime($event)" (chosenDateTime)="chosenDateTime=$event"></app-booking-selecter>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!--     *********    Choose your Paying Method     *********      -->
-<div class="cd-section section-white" id="paying-method">
-    <div class="pricing-1 section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 ml-auto mr-auto text-center">
-                    <h2 class="title">Check total price</h2>
-                    <!-- <h5 class="description">You can choose PayPal or Credit card</h5> -->
-                </div>
-            </div>
-            <div class="space-top"></div>
-            <div class="nav-tabs-navigation">
-                <div class="nav-tabs-wrapper">
-                    <ngb-tabset [justify]="'center'">
-                        <!-- <ngb-tab title="PayPal">
-                            <ng-template ngbTabContent >
-                                <h3 class="text-muted">Total price</h3>
-                                <div class="space-top"></div>
-                            </ng-template>
-                        </ngb-tab> -->
-                        <ngb-tab title="CreditCard">
-                            <ng-template ngbTabContent>
-                                <h3 class="text-muted">Total price</h3>
-                                <div class="space-top"></div>
-                                <ng-container *ngIf="!stripeCustomerId">
-                                    <app-payment (paymentComfirmed)="onPaymentConfirmed($event)"></app-payment>
-                                </ng-container>
-                                <ng-container *ngIf="stripeCustomerId">
-                                    <button class="btn btn-primary" (click)="stripeCustomerId=''">Change paying method?</button>
-                                </ng-container>
-                                <div class="space-top"></div>
-                                <button *ngIf="!(chosenCourse && chosenDateTime && stripeCustomerId)" [disabled]="true" class="btn btn-round" (click)="createBooking()">Book Now!</button>
-                                <button *ngIf="chosenCourse && chosenDateTime && stripeCustomerId" class="btn btn-warning btn-round" (click)="createBooking()">Book Now!</button>
-                                <div class="space-top"></div>
-                            </ng-template>
-                        </ngb-tab>
-                    </ngb-tabset>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 </section>
