--- a/src/assets/sass/paper-kit/_examples.scss
+++ b/src/assets/sass/paper-kit/_examples.scss
@@ -242,6 +242,14 @@
         width: 100%;
     }
 }
+.anytime-pt-logo{
+    max-width: 450px;
+    margin: 40px auto 45px;
+
+    img{
+        width: 100%;
+    }
+}
 .page-header{
     .content-center{
         //margin-top: 85px;
